mobile spacing fixes

--- a/css/scss/globals/_buttons.scss
+++ b/css/scss/globals/_buttons.scss
@@ -51,6 +51,10 @@
 	}
 }
 
+.button-involved {
+  display: inline-block;
+}
+
 
 /* -----------------------------------------------------------------------------
 	# Old Buttons
